# logsnap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-initial-decisions.md  0001-toml-config-format.md  0002-typer-cli.md  0003-pure-python-polling.md  0004-separate-test-directories.md  0005-dedicated-module-per-command-group.md
logsnap/: config.py  config_cmd.py  main.py  snapshot.py  watcher.py
tests/: test_config.py  test_snapshot.py  test_watcher.py
tests/integration/: test_config_cmd.py
