[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logsnap"
version = "0.1.0"
description = ""
authors = [{name = "Michael George"}]
license = {text = "MIT"}
requires-python = ">=3.12.3"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
