[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logsnap"
version = "0.1.0"
description = "Tail, filter, and snapshot logs from multiple sources"
authors = [{name = "Michael George"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "tomli-w>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
logsnap = "logsnap.main:app"

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 64
target-version = "py311"
